--- a/style.css
+++ b/style.css
@@ -17,7 +17,14 @@ font-family: 'Open Sans', sans-serif;
     
 }*/
 
-
+/*ESTILOS GERAIS */
+html, body, figure, img, div, input, textarea, p, h1, h2, h3, h4, h5, h6, ul, li, a, main {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
 
 .coluna{
     flex-basis: 49%;
