--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ main .coluna section ul li strong{
     color: cornsilk;
     background: rgb(113, 34, 150);  /* color: rgb(255, 76, 76); */
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .coluna-esquerda section ul li:hover{
@@ -157,6 +158,7 @@ main .coluna section ul li strong{
     padding: 15px;
     /* padding-bottom: 15px; */
     border-radius: 10px;
+    cursor: pointer;
 }
 
 /* COLUNA ESQUERDA HOVER  */
@@ -167,12 +169,16 @@ main .coluna section ul li strong{
     /* rgb(62, 5, 88) */
     padding: 10px;
     border-radius: 10px;
+    cursor: pointer;
 }
+
+/* COLUNA DIREITA HOVER  */
 
 .coluna-direita section ul li:hover p {
     color: cornsilk;
     background: rgb(113, 34, 150); 
     border-radius: 10px;
+    cursor: pointer;
 }
 
 /*FOOTER*/
@@ -187,10 +193,14 @@ footer nav ul li a{
     color: cornsilk;
 }
 
-footer nav ul li a:hover {
+footer nav .info-contato li a:hover {
     color: rgb(186, 146, 212);
+    margin-left: 5px;
 }
 
+footer nav .redes-sociais li:hover {
+    margin-top: 5px;
+}
 
 footer nav ul li{
     color: white;
@@ -210,10 +220,6 @@ footer nav .redes-sociais li{
     display: inline-block;
 }
 
-footer nav ul li:hover {
-    /* color: rgb(186, 146, 212); */
-    padding-top: 5px;
-}
 footer nav .redes-sociais li a img{
     width: 50px;
 }
